# wbs

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tauri.key.pub  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/review/: COPILOT_REVIEW_PERSPECTIVES.md  gemini.md
public/data/: sampleTasks.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnalysisView.tsx  ArchiveView.tsx  DailyTaskPanel.tsx  GanttChart.tsx  GanttLeftPanel.tsx  GanttTimeline.tsx  GanttTooltip.tsx  KanbanBoard.tsx  MarkdownComponents.tsx  MemoField.tsx  MemoFloatingPanel.tsx  MemoView.tsx  MemoWithToggle.tsx  NoteView.tsx  ProxySettingModal.tsx  SearchView.tsx  SettingsModal.tsx  SignalDot.tsx  TaskAddModal.tsx  TaskEditModal.tsx  TestProgressView.tsx  UpdateNotifier.tsx
src/constants/: layout.ts
src/data/: sampleData.ts
src/hooks/: useDragHandler.ts  useGanttFilter.ts  useReminder.ts
src/test/: estimationUtils.test.ts  exportToExcel.test.ts  holidays.test.ts  settingsStorage.test.ts  taskStorage.test.ts  taskUtils.test.ts  useDragHandler.test.ts  useGanttFilter.test.ts  useReminder.test.ts
src/types/: task.ts  testBook.ts
src/utils/: estimationUtils.ts  exportToExcel.ts  holidays.ts  settingsStorage.ts  taskStorage.ts  taskUtils.ts  testBookStorage.ts
~/.tauri/: wbs.key.pub
