[package]
name = "wbs"
version = "0.1.0"
description = "WBS 進捗管理アプリ"
authors = []
edition = "2021"

[lib]
name = "wbs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wbs"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
