[package]
name = "wbs"
version = "1.0.11"
description = "WBS 進捗管理アプリ"
authors = []
edition = "2021"

[lib]
name = "wbs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wbs"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
encoding_rs = "0.8"
backtrace = "0.3"
chrono = "0.4"
